[fix] pexcept is not a file but a module

--- a/scripts/install
+++ b/scripts/install
@@ -8,5 +8,5 @@ sudo cp buggy.py /tmp/debug_stdin
 cd /tmp/debug_stdin
 
 sudo virtualenv ve --system-site-packages
-sudo ve/bin/pip install -r pexpect
+sudo ve/bin/pip install pexpect
 sudo ve/bin/python buggy.py
